--- a/.travis.yml
+++ b/.travis.yml
@@ -47,9 +47,7 @@ x-template:
   stage: test
   install: travis_wait mvn clean install --projects janusgraph-${MODULE} --also-make -DskipTests=true
     -Dmaven.javadoc.skip=true --batch-mode --show-version ${INSTALL_ARGS};
-  script: 
-    - travis_wait 50 mvn verify --projects janusgraph-${MODULE} ${ARGS}
-    - bash printStackTrace.sh
+  script: travis_wait 50 mvn verify --projects janusgraph-${MODULE} ${ARGS};
   if: type = cron OR commit_message =~ /\[full build\]/
 
 x-template:
@@ -57,10 +55,10 @@ x-template:
   stage: test
   install: travis_wait mvn clean install --projects janusgraph-${MODULE} --also-make -DskipTests=true 
     -Dmaven.javadoc.skip=true --batch-mode --show-version ${INSTALL_ARGS};
-  script: 
-    - travis_wait 50 mvn verify --projects janusgraph-${MODULE} -Pcoverage ${ARGS}
-    - bash printStackTrace.sh
-  after_success: bash <(curl -s https://codecov.io/bash);
+  script: travis_wait 50 mvn verify --projects janusgraph-${MODULE} -Pcoverage ${ARGS};
+  after_success: 
+     - bash printStackTrace.sh
+     - bash <(curl -s https://codecov.io/bash)
   if: commit_message !~ /\[doc only\]/
 
 jobs:
